# Monde

./: CMakeLists.txt  CMakePresets.json  readme.md
Monde/: CMakeLists.txt
Monde/include/: Camera.hpp  ShaderReader.hpp  Vector3.hpp  Window.hpp
Monde/include/Primitives/: Primitive.hpp  Square.hpp  Triangle.hpp
Monde/source/: Camera.cpp  ShaderReader.cpp  Window.cpp  main.cpp
Monde/source/Primitives/: Triangle.cpp
Monde/source/shaders/: fragment.glsl  vertex.glsl
include/: Material.hpp  ShaderReader.hpp  Window.hpp
include/Lights/: ILight.hpp  Light.hpp
include/Primitives/: Cube.hpp  IPrimitive.hpp  Primitive.hpp  Pyramid.hpp  Sphere.hpp  Triangle.hpp
source/: Camera.cpp  Vector3.cpp  Window.cpp  main.cpp
source/Lights/: Light.cpp
source/Primitives/: Cube.cpp  Primitive.cpp  Pyramid.cpp  Sphere.cpp  Triangle.cpp
source/shaders/: fragment.glsl  vertex.glsl
